--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,11 @@
 {% extends "template.html"%}
 {% block content %}
-    <h2>Welcome to the Flask blog!</h2>
-    <h2>Please login to access your blog</h2>
-    <p>Temp login: <a href="/main">Login</a></p>
+    <h2>Welcome to the <font color="red">Flask</font> blog!</h2>
+    <h3>Please login to access your blog</h3>
+    <form action="" method="post">
+        Username: <input type="text" name="username" value="{{request.form.username}}">
+        <br>
+        Password: <input type="password" name="password" value="{{request.form.password}}">
+        <p><input type="submit" value="Login"></p>
+    </form>
 {% endblock %}
