--- a/templates/main.html
+++ b/templates/main.html
@@ -1,4 +1,5 @@
 {% extends "template.html"%}
 {% block content %}
-    <h2>Welcome to the <b>Flask</b> blog !</h2>
+    <h2>Welcome to the Flask blog !</h2>
+    <p><a href="/logout">Logout</a></p>
 {% endblock %}
